--- a/CVATDatasets_ML.ipynb
+++ b/CVATDatasets_ML.ipynb
@@ -25,7 +25,7 @@
         "\n",
         "> このノートブックは、[the Megvii Team](https://github.com/Megvii-BaseDetection)の[YOLOX repository](https://github.com/Megvii-BaseDetection/YOLOX)と[roboflow-ai's notebook](https://colab.research.google.com/drive/1_xkARB35307P0-BTnqMy0flmYrfoYi5T#scrollTo=igwruhYxE_a7)に基づいています。このリポジトリを作成してくれたMegviiチームとnotebookを作成してくれたroboflow-aiさんに感謝します。  \n",
         "\n",
-        "> This notebook is based on [the Megvii Team](https://github.com/Megvii-BaseDetection)'s [YOLOX repository](https://github.com/Megvii-BaseDetection/ YOLOX) of [the Megvii Team](https://colab.research.google.com/drive/1_xkARB35307P0-BTnqMy0flmYrfoYi5T#scrollTo=igwruhYxE_a7) and [roboflow-ai's notebook](https://colab.research.google.com/drive/1_xkARB35307P0-BTnqMy0flmYrfoYi5T#scrollTo=igwruhYxE_a7). This notebook is based on Thanks to the Megvii team for creating this repository and to roboflow-ai for creating the notebook.\n",
+        "> This notebook is based on [the Megvii Team](https://github.com/Megvii-BaseDetection)'s [YOLOX repository](https://github.com/Megvii-BaseDetection/) YOLOX of [the Megvii Team](https://colab.research.google.com/drive/1_xkARB35307P0-BTnqMy0flmYrfoYi5T#scrollTo=igwruhYxE_a7) and [roboflow-ai's notebook](https://colab.research.google.com/drive/1_xkARB35307P0-BTnqMy0flmYrfoYi5T#scrollTo=igwruhYxE_a7). This notebook is based on Thanks to the Megvii team for creating this repository and to roboflow-ai for creating the notebook.\n",
         "\n",
         "\n",
         "### 参考サイトを読む/Accompanying Web Site\n",
